--- a/public/style/css/game.css
+++ b/public/style/css/game.css
@@ -1,1 +1,65 @@
-body{font:22px 'Roboto','黑體-繁','微軟正黑體',sans-serif;padding-top:20px}#main{height:100%}#menu{display:-webkit-flex;display:flex;-webkit-align-items:center;align-items:center;-webkit-justify-content:center;justify-content:center;height:10%;background-color:#F4F1AE}#question{display:-webkit-flex;display:flex;-webkit-align-items:center;align-items:center;-webkit-justify-content:center;justify-content:center;height:50%;background-color:#90EE90}#question p{text-align:justify;font-size:24px}#answer .grid.stackable{margin:0}#answer .column{background-color:#ADD8E6}#answer .column:hover{background-color:#7cdfff}#answer .column p{text-align:justify;font-size:24px}#answer .column p span{padding-left:10px}
+body {
+  font: 22px 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
+  color: #F7FBFC;
+}
+#bg {
+  height: 100%;
+  width: 100%;
+  background: url(../../img/bg.jpg) no-repeat center center;
+  background-size: 100% 100%;
+  -webkit-filter: brightness(0.4);
+  filter: brightness(0.4);
+}
+#main {
+  height: 100%;
+  position: absolute;
+  padding-top: 20px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+#menu {
+  height: 10%;
+}
+#menu .grid {
+  width: 100%;
+}
+#menu .column:nth-child(1) p {
+  text-align: center;
+}
+#menu .column:nth-child(2) p {
+  text-align: right;
+}
+#question {
+  height: 50%;
+}
+#question p {
+  text-align: justify;
+  font-size: 22px;
+}
+.center-justified {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+#answer {
+  height: 35%;
+}
+#answer .grid {
+  width: 100%;
+  margin: 0px;
+}
+#answer button {
+  width: 100%;
+}
+#answer p {
+  text-align: justify;
+  font-size: 22px;
+}
+#answer p span {
+  padding-left: 10px;
+}
