--- a/public/style/css/game.css
+++ b/public/style/css/game.css
@@ -1,65 +1,1 @@
-body {
-  font: 22px 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
-  color: #F7FBFC;
-}
-#bg {
-  height: 100%;
-  width: 100%;
-  background: url(../../img/bg.jpg) no-repeat center center;
-  background-size: 100% 100%;
-  -webkit-filter: brightness(0.4);
-  filter: brightness(0.4);
-}
-#main {
-  height: 100%;
-  position: absolute;
-  padding-top: 20px;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-#menu {
-  height: 10%;
-}
-#menu .grid {
-  width: 100%;
-}
-#menu .column:nth-child(1) p {
-  text-align: center;
-}
-#menu .column:nth-child(2) p {
-  text-align: right;
-}
-#question {
-  height: 50%;
-}
-#question p {
-  text-align: justify;
-  font-size: 22px;
-}
-.center-justified {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-#answer {
-  height: 35%;
-}
-#answer .grid {
-  width: 100%;
-  margin: 0px;
-}
-#answer button {
-  width: 100%;
-}
-#answer p {
-  text-align: justify;
-  font-size: 22px;
-}
-#answer p span {
-  padding-left: 10px;
-}
+body{font:22px 'Roboto','黑體-繁','微軟正黑體',sans-serif;color:#F7FBFC}#bg{height:100%;width:100%;background:url(../../img/bg.jpg) no-repeat center center;background-size:100% 100%;-webkit-filter:blur(2px) brightness(.4);filter:blur(2px) brightness(.4)}.result-icon #correct{display:none;color:#9DE0AD}.result-icon #wrong{display:none;color:#FF5656}.result-icon i{position:fixed;margin:auto;left:0;right:0;top:0;bottom:0;font-size:270px;z-index:2}#main{height:100%;position:absolute;padding-top:20px;top:0;left:0;right:0;bottom:0}#menu{height:10%}#menu .grid{width:100%}#menu .column:nth-child(1) p{text-align:left}#menu .column:nth-child(2) p{text-align:right}#menu span{padding:0 10px}#question{height:45%}#question p{text-align:justify;font-size:26px}.center-justified{display:-webkit-flex;display:flex;-webkit-align-items:center;align-items:center;-webkit-justify-content:center;justify-content:center}#answer{height:35%}#answer .grid{width:100%;margin:0}#answer button{width:100%}#answer p{text-align:justify;font:22px 'Roboto','黑體-繁','微軟正黑體',sans-serif}#answer p span{padding-left:10px}@media screen and (max-width:480px){#question p{font:18px 'Roboto','黑體-繁','微軟正黑體',sans-serif;padding:0 10px}#answer{height:35%}#answer .column{padding-top:0 !important}#answer p{font:16px 'Roboto','黑體-繁','微軟正黑體',sans-serif}}
