:cat2:主遊戲流程完成

--- a/views/drawpad.pug
+++ b/views/drawpad.pug
@@ -1,6 +1,6 @@
 extends layout
 block css
-  link(rel='stylesheet', href='./style/css/result.css')
+  link(rel='stylesheet', href='./style/css/drawpad.css')
 block content
   #bg
   .ui.container#main
@@ -14,4 +14,4 @@ block content
     img#img
 block js
   script(src='./socket.io/socket.io.js')
-  script(src='./js/result.js')
+  script(src='./js/drawpad.js')
