--- a/public/style/less/game.less
+++ b/public/style/less/game.less
@@ -1,16 +1,3 @@
-body {
-  font: 22px 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
-  color: #F7FBFC;
-}
-#bg {
-  height: 100%;
-  width: 100%;
-  background: url(../../img/bg.jpg) no-repeat center center;
-  background-size: 100% 100%;
-  -webkit-filter: blur(2px) brightness(0.4);
-          filter: blur(2px) brightness(0.4);
-}
-
 .result-icon {
   #correct {
     display: none;
@@ -31,36 +18,11 @@ body {
     z-index: 2;
   }
 }
-// #correct {
-//   display: none;
-//   i {
-//     color: #9DE0AD;
-//   }
-// }
-// #wrong {
-//   display: none;
-//   i {
-//     color: #FF5656;
-//   }
-// }
-// i.result-icon {
-//   position: fixed;
-//   margin: auto;
-//   left: 0;
-//   right: 0;
-//   top: 0;
-//   bottom: 0;
-//   font-size: 270px;
-//   z-index: 2;
-// }
-#main {
+#gameStep, #resultStep {
   height: 100%;
-  position: absolute;
-  padding-top: 20px;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+}
+#resultStep {
+  display: none;
 }
 #menu {
   height: 10%;
@@ -84,14 +46,7 @@ body {
     font-size: 26px;
   }
 }
-.center-justified {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center;
-          align-items: center;
-  -webkit-justify-content: center;
-          justify-content: center;
-}
+
 #answer {
   height: 35%;
   .grid {
@@ -108,6 +63,22 @@ body {
         padding-left: 10px;
       }
     }
+}
+
+#result {
+  height: 100%;
+  h3 {
+    font-size: 30px;
+  }
+  h1 {
+    font-size: 120px;
+    margin-top: 0px;
+    text-align: center;
+    small {
+      padding-left: 5px;
+      font-size: 20px;
+    }
+  }
 }
 
 @media screen and (max-width: 480px) {
