--- a/public/style/less/main.less
+++ b/public/style/less/main.less
@@ -1,10 +1,9 @@
 body {
-  font: 22px 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
+  font-family: 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
   color: #F7FBFC;
 }
-input {
-  font: 14px 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
-  width: 100%;
+p {
+  font-size: 22px;
 }
 #bg {
   height: 100%;
@@ -23,17 +22,6 @@ input {
   right: 0;
   bottom: 0;
 }
-#myCanvas {
-  height: 300px;
-  width: 100%;
-  background-color: white;
-}
-#img {
-  display: none;
-}
-#drawpad {
-  height: 70%;
-}
 .center-justified {
   display: -webkit-flex;
   display: flex;
@@ -41,7 +29,4 @@ input {
           align-items: center;
   -webkit-justify-content: center;
           justify-content: center;
-}
-.right-aligned {
-  text-align: right;
 }
