--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='shortcut icon', type='image/x-icon', href='./img/icon.ico')
     link(rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css')
+    link(rel='stylesheet', href='./style/css/main.css')
     block css
   body
     block content
