--- a/views/index.pug
+++ b/views/index.pug
@@ -25,19 +25,19 @@ block content
       .center-justified#answer
         .ui.grid.stackable
           .eight.wide.column
-            button.ui.inverted.white.button(value='1')
+            button.ui.button.inverted(value='1')
               p A.
                 span
           .eight.wide.column
-            button.ui.inverted.white.button(value='2')
+            button.ui.button.inverted(value='2')
               p B.
                 span
           .eight.wide.column
-            button.ui.inverted.white.button(value='3')
+            button.ui.button.inverted(value='3')
               p C.
                 span
           .eight.wide.column
-            button.ui.inverted.white.button(value='4')
+            button.ui.button.inverted(value='4')
               p D.
                 span
     #resultStep
