--- a/public/style/less/game.less
+++ b/public/style/less/game.less
@@ -53,16 +53,21 @@
     width: 100%;
     margin: 0px;
   }
-  button {
-      width: 100%;
+  .ui.inverted.button {
+    width: 100%;
+    &.active, &:active, &:focus {
+      background: transparent !important;
+      box-shadow: 0 0 0 2px #FFF inset!important;
+      color: white !important;
     }
-    p {
-      text-align: justify;
-      font: 22px 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
-      span {
-        padding-left: 10px;
-      }
+  }
+  p {
+    text-align: justify;
+    font: 22px 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
+    span {
+      padding-left: 10px;
     }
+  }
 }
 
 #result {
