:cat2:統計題目正確率功能完成

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ block content
               | 第
               span 1
               | 題
-          .eight.wide.column#currentPersent
+          .eight.wide.column#correctPersent
             p
               | 正確率
               span
