--- a/public/style/less/game.less
+++ b/public/style/less/game.less
@@ -1,24 +1,14 @@
-.result-icon {
-  #correct {
-    display: none;
-    color: #9DE0AD;
-  }
-  #wrong {
-    display: none;
-    color: #FF5656;
-  }
-  i {
-    position: fixed;
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    font-size: 270px;
-    z-index: 2;
-  }
+#correct {
+  display: none;
+  color: #9DE0AD;
+  font-size: 270px;
 }
-#gameStep, #resultStep {
+#wrong {
+  display: none;
+  color: #FF5656;
+  font-size: 270px;
+}
+#gameStep {
   height: 100%;
 }
 #resultStep {
@@ -46,10 +36,6 @@
     font-size: 26px;
   }
 }
-.bg-blur {
-  -webkit-filter: blur(5px);
-  filter: blur(5px);
-}
 
 #answer {
   height: 35%;
@@ -57,35 +43,11 @@
     width: 100%;
     margin: 0px;
   }
-  .ui.inverted.button {
-    width: 100%;
-    &.active, &:active, &:focus {
-      background: transparent !important;
-      box-shadow: 0 0 0 2px #FFF inset!important;
-      color: white !important;
-    }
-  }
   p {
     text-align: justify;
     font: 22px 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
     span {
       padding-left: 10px;
-    }
-  }
-}
-
-#result {
-  height: 100%;
-  h3 {
-    font-size: 30px;
-  }
-  h1 {
-    font-size: 120px;
-    margin-top: 0px;
-    text-align: center;
-    small {
-      padding-left: 5px;
-      font-size: 20px;
     }
   }
 }
