--- a/public/style/less/main.less
+++ b/public/style/less/main.less
@@ -4,6 +4,19 @@ body {
 }
 p {
   font-size: 22px;
+  margin: 0px;
+}
+.ui.segment {
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+  box-shadow: none;
+  border: 0px;
+  margin: 0px;
+  padding: 0px;
+  position: fixed;
+  top: 0;
+  z-index: -1;
 }
 #bg {
   height: 100%;
@@ -23,10 +36,32 @@ p {
   bottom: 0;
 }
 .center-justified {
+  flex-direction:column;
   display: -webkit-flex;
   display: flex;
   -webkit-align-items: center;
           align-items: center;
   -webkit-justify-content: center;
           justify-content: center;
+}
+body {
+  background-color: black;
+}
+.ghost-button {
+  display: inline-block;
+  width: 100%;
+  padding: 8px;
+  color: #fff;
+  border: 3px solid #fff;
+  border-radius: 5px;
+  text-align: center;
+  outline: none;
+  text-decoration: none;
+  &:hover, &:active {
+    background-color: #fff;
+    color: #000;
+  }
+}
+.zTop {
+  z-index: 100 !important;
 }
