:cat2:遮罩設定修改

--- a/views/form.pug
+++ b/views/form.pug
@@ -3,6 +3,12 @@ block css
   link(rel='stylesheet', href='./style/css/form.css')
 block content
   #bg
+  .ui.page.dimmer
+    .content
+      .center
+        #checkBox
+          i.checkmark.box.icon
+          h3 感謝填寫！
   .ui.container#main
     #resultStep
       #result
