--- a/views/index.pug
+++ b/views/index.pug
@@ -4,12 +4,14 @@ block css
   link(rel='stylesheet', href='./style/css/form.css')
 block content
   #bg
-  .ui.segment
-    .ui.dimmer
-      .content
-        .center
-          i.radio.icon#correct
-          i.remove.icon#wrong
+  .ui.page.dimmer
+    .content
+      .center
+        i.radio.icon#correct
+        i.remove.icon#wrong
+        #checkBox
+          i.checkmark.box.icon
+          h3 感謝填寫！
   .ui.container#main
 
     #gameStep
