--- a/public/style/less/form.less
+++ b/public/style/less/form.less
@@ -1,22 +1,11 @@
+#checkBox {
+  display: none;
+  i.icon {
+    font-size: 270px;
+  }
+}
 #result {
   height: 100%;
-  h1 {
-    font-size: 120px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    text-align: center;
-    small {
-      padding-left: 5px;
-      font-size: 20px;
-    }
-  }
-  h3 {
-    font-size: 30px;
-  }
-  h4 {
-    margin-top: 0px;
-    font-size: 22px;
-  }
 }
 #resultStep {
   height: 100%;
