--- a/public/style/less/main.less
+++ b/public/style/less/main.less
@@ -2,21 +2,27 @@ body {
   font-family: 'Roboto', '黑體-繁', '微軟正黑體', sans-serif;
   color: #F7FBFC;
 }
+h1 {
+  font-size: 120px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-align: center;
+  small {
+    padding-left: 5px;
+    font-size: 20px;
+  }
+}
+h3 {
+  margin: 0px;
+  font-size: 30px;
+}
+h4 {
+  margin-top: 0px;
+  font-size: 22px;
+}
 p {
   font-size: 22px;
   margin: 0px;
-}
-.ui.segment {
-  height: 100%;
-  width: 100%;
-  background-color: transparent;
-  box-shadow: none;
-  border: 0px;
-  margin: 0px;
-  padding: 0px;
-  position: fixed;
-  top: 0;
-  z-index: -1;
 }
 #bg {
   height: 100%;
